WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52132
Assertion failure in KURL::KURL when calling WKURLRequestCreateWithWKURL with a non-parsed URL
https://bugs.webkit.org/show_bug.cgi?id=52132
Summary
Assertion failure in KURL::KURL when calling WKURLRequestCreateWithWKURL with...
mitz
Reported
2011-01-09 10:56:31 PST
Assertion failure in KURL::KURL when calling WKURLRequestCreateWithWKURL with a non-parsed URL
Attachments
Use a parsed URL in WKURLRequestCreateWithWKURL
(2.50 KB, patch)
2011-01-09 11:04 PST
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-01-09 10:57:31 PST
<
rdar://problem/8839498
>
mitz
Comment 2
2011-01-09 11:04:30 PST
Created
attachment 78353
[details]
Use a parsed URL in WKURLRequestCreateWithWKURL
mitz
Comment 3
2011-01-09 11:38:10 PST
Fixed in <
http://trac.webkit.org/changeset/75355
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug