Assertion failure in KURL::KURL when calling WKURLRequestCreateWithWKURL with a non-parsed URL https://bugs.webkit.org/show_bug.cgi?id=52132

Reviewed by Simon Fraser.

* Shared/API/c/WKURLRequest.cpp:
(WKURLRequestCreateWithWKURL): Parse the URL.
* Shared/WebString.h: Fixed a comment.
* Shared/WebURL.h: Ditto.



git-svn-id: svn://svn.chromium.org/blink/trunk@75355 bbb929c8-8fbe-4397-9dbb-9b2b20218538