third_party/WebKit/WebKit2/Shared/API/c/WKURLRequest.cpp
@@ -1,6 +1,6 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2010 Apple Inc. All rights reserved.
+ * Copyright (C) 2010, 2011 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,7 +28,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "WKAPICast.h"
 #include "WebURLRequest.h"
+#include <WebCore/KURL.h>
 
+using namespace WebCore;
 using namespace WebKit;
 
 WKTypeID WKURLRequestGetTypeID()
@@ -38,5 +40,5 @@ WKTypeID WKURLRequestGetTypeID()
 
 WKURLRequestRef WKURLRequestCreateWithWKURL(WKURLRef url)
 {
-    return toAPI(WebURLRequest::create(toImpl(url)->string()).leakRef());
+    return toAPI(WebURLRequest::create(KURL(KURL(), toImpl(url)->string())).leakRef());
 }
