third_party/WebKit/WebKit2/Shared/WebString.h
@@ -35,7 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebKit {
 
-// WebString - An string array type suitable for vending to an API.
+// WebString - A string type suitable for vending to an API.
 
 class WebString : public APIObject {
 public:
