third_party/WebKit/WebKit2/Shared/WebURL.h
@@ -33,7 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebKit {
 
-// WebURL - An string array type suitable for vending to an API.
+// WebURL - A URL type suitable for vending to an API.
 
 class WebURL : public APIObject {
 public:
